@@ -7,7 +7,7 @@
 #
 # Copyright (c) 2003 by David N. Welton <davidw@dedasys.com>.
 #
-# $Id: multiplexer.test,v 1.9 2006/10/30 06:17:09 andreas_kupries Exp $
+# $Id: multiplexer.test,v 1.10 2011/11/08 02:34:20 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -166,7 +166,7 @@ proc TestAccessFilter {chan clientaddress clientport} {
     return 0
 }
 
-test multiplexer-5.1 {add access filter} {
+test multiplexer-5.1.0 {add access filter} tcl8.5minus {
     set ::forever {}
     set mp [multiplexer::create]
     ${mp}::Init 37465
@@ -180,6 +180,21 @@ test multiplexer-5.1 {add access filter} {
     ${mp}::destroy
     string match {127.*.*.* 127.*.*.*} $::forever
 } 1
+
+test multiplexer-5.1.1 {add access filter} tcl8.6plus {
+    set ::forever {}
+    set mp [multiplexer::create]
+    ${mp}::Init 37465
+    ${mp}::AddAccessFilter TestAccessFilter
+    update
+    set sk1 [socket localhost 37465]
+    set sk2 [socket localhost 37465]
+
+    vwait ::forever
+    vwait ::forever
+    ${mp}::destroy
+    set ::forever
+} {::1 ::1}
 
 proc DenyAccessFilter {chan clientaddress clientport} {
     return -1
