@@ -1,3 +1,8 @@
+2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* multiplexer.test: Split a test with core version dependent
+	  results into two, one per possible result.
+
 2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
